[package]
name = "spritebatch"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22.1.0"
bytemuck = { version = "1.17.1", features = ["derive"] }
env_logger = "0.11.5"
pollster = "0.3.0"
winit = { version = "0.29", features = ["rwh_05"] }
image = "0.25.4"
cgmath = "0.18.0"
rand = "0.9.0-beta.1"