[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

[dependencies]
bananagraph = { path = "../bananagraph" }
grid = { path = "../grid" }
pollster = "0.3.0"
cgmath = "0.18.0"
hecs = "0.10.5"
# winit only needed for keyevent stuff, TODO: find a better answer here
# winit = { version = "0.29", features = ["rwh_05"] }
