[package]
name = "web-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true

[dependencies]
bananagraph = { path = "../bananagraph" }
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50" # Needed to wasm_bindgen async fns
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement"
]}
log = "0.4.22"
wgpu = { version="22.1.0", default-features = false, features = ["webgl"] }

# Needed pro tem to fix the "could not resolve env" bug
instant = { version = "0.1.12", features = ["wasm-bindgen"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = true